--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html>
-  <body>
-    <div id="root"></div>
+  <body style="margin: 0px">
+    <div id="root" style="height: 100%"></div>
     <script src="bundle.js" charset="utf-8"></script>
   </body>
 </html>
