--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Lemming</title>
+  </head>
   <body style="margin: 0px">
-    <div id="root" style="height: 100%"></div>
-    <script src="bundle.js" charset="utf-8"></script>
+    <div id="root" style="width: 100vw; height: 100vh"></div>
   </body>
 </html>
